<resources>
    <string name="app_name">KM Test</string>
    <string name="name">Name</string>
    <string name="photo">photo</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="back">back</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="choose_a_user">Choose a user</string>
    <string name="third_screen">Third Screen</string>
    <string name="avatar">avatar</string>
    <string name="data_is_empty">Data is Empty</string>
</resources>