<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_3x"
    tools:context=".views.FirstScreen">
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <ImageView
                android:id="@+id/photo"
                android:layout_width="116dp"
                android:layout_height="116dp"
                android:layout_marginTop="142dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_photo_3x"
                android:contentDescription="@string/photo" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="58dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/input_field"
                android:paddingStart="20dp"
                android:paddingEnd="16dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_36p"
                android:textSize="16sp"
                android:hint="@string/name"
                app:layout_constraintTop_toBottomOf="@+id/photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/palindrome"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="22dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/input_field"
                android:paddingStart="20dp"
                android:paddingEnd="16dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_36p"
                android:textSize="16sp"
                android:hint="@string/palindrome"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/check"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="45dp"
                android:text="@string/check"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/dark_green"
                app:layout_constraintTop_toBottomOf="@+id/palindrome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="15dp"
                android:text="@string/next"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/dark_green"
                app:layout_constraintTop_toBottomOf="@+id/check"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>